Fixing minor homepage layout bugs at smaller breakpoints, as well as an issue with Google search result with extraneous div

--- a/index.css
+++ b/index.css
@@ -198,10 +198,6 @@ html.touch .intro h2 span::after {
   text-align: left;
 }
 
-.intro h2 #last {
-  display: inline-block;
-}
-
 .aboutimage {
   position: absolute;
   left: 100%;
@@ -508,12 +504,13 @@ html.touch .gallery:hover .image img {
   .intro h2 {
     max-width: 380px;
     padding: 0 15px;
+    margin: 0 auto;
     font-size: 24px;
     line-height: 30px;
   }
 
   .intro .links {
-    margin-top: 20px;
+    margin: 20px auto 0 auto;
     max-width: 380px;
     padding: 0 15px;
   }
@@ -570,8 +567,7 @@ html.touch .gallery:hover .image img {
   }
 
   .intro {
-    padding: 0 40px;
-    width: calc(100% - 80px);
+    padding: 0 25px;
   }
 
   .about,
